// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled PrimaryButton Should Render 1`] = `
<button
  className="warn__Button-jf7089-0 kKcOEW"
  disabled={true}
  onClick={null}
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`PrimaryButton Should Render 1`] = `
<button
  className="warn__Button-jf7089-0 kKcOEW"
  onClick={null}
>
  <span>
    Login
  </span>
</button>
`;
